# ed25519

./: .gitmodules  CMakeLists.txt  README.md
src/: add_scalar.c  fe.c  ge.c  key_exchange.c  keypair.c  sc.c  seed.c  sha512.c  sign.c  verify.c
src/test/: test.c
